# sbc-html-config

./: .gitignore  pyinstaller.py  pyproject.toml
.github/workflows/: release.yaml
src/: env.py  main.py  util.py
src/acme/: context.py  parser.py  renderer.py
src/acme/assets/: index.html  tree.html
src/acme/assets/static/: main.css  main.js
tests/: acme.py
